[gd_scene format=3 uid="uid://c316m6ovwsluh"]

[ext_resource type="Script" uid="uid://cjt67v6p6myp7" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://w1m7nig1pxpr" path="res://assets/sprites/ui/ticke_background_main.png" id="2_7rblo"]
[ext_resource type="StyleBox" uid="uid://ded5p2rkypovp" path="res://resources/UI/style_wacky.tres" id="3_agb1x"]
[ext_resource type="StyleBox" uid="uid://dcnm8vt6525qd" path="res://resources/UI/button_texture.tres" id="3_orblh"]
[ext_resource type="FontFile" uid="uid://b7v3dl24ymbhe" path="res://assets/fonts/PixelifySans-Regular.ttf" id="3_u4trl"]
[ext_resource type="StyleBox" uid="uid://djo0dh72sq5xq" path="res://resources/UI/button_hover_texture.tres" id="4_u4trl"]
[ext_resource type="Script" uid="uid://cgymwu5efhc8x" path="res://scripts/settings.gd" id="6_7rblo"]
[ext_resource type="Texture2D" uid="uid://415ws56bm4n4" path="res://assets/sprites/ui/zanni_logo_circle.png" id="6_81rgk"]
[ext_resource type="FontFile" uid="uid://c4g6ehyj6nv4k" path="res://assets/fonts/PixelifySans-Medium.ttf" id="6_ov3pg"]
[ext_resource type="SpriteFrames" uid="uid://5ug0cmtd2htl" path="res://resources/animations/zanni_animations.tres" id="7_a6001"]
[ext_resource type="Texture2D" uid="uid://e0hfqpx5pxvf" path="res://assets/sprites/ui/zanni_logo_band.png" id="8_orblh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("2_7rblo")

[sub_resource type="Theme" id="Theme_81rgk"]
default_font = ExtResource("6_ov3pg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alora"]
bg_color = Color(0.93761474, 0.8472896, 0.8027698, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1
shadow_color = Color(0.29494292, 0.025984976, 0.026091356, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, -2.205)

[node name="MainMenu" type="Control" unique_id=1798618166]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_bqqt6")

[node name="ReferenceRect" type="ReferenceRect" parent="." unique_id=1044005413]
top_level = true
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
border_color = Color(1, 1, 1, 1)

[node name="background" type="Panel" parent="." unique_id=636931330]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.999998
offset_top = -112.0
offset_right = -32.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.25830874
scale = Vector2(1.565, 1.565)
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="menu" type="Control" parent="." unique_id=535861192]
anchors_preset = 0
offset_left = 248.0
offset_top = 113.0
offset_right = 288.0
offset_bottom = 153.0

[node name="startbutton" type="Button" parent="menu" unique_id=814977984 node_paths=PackedStringArray("shortcut_context")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -97.0
offset_right = 32.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../quitbutton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../settingsbutton")
shortcut_context = NodePath(".")
theme_override_colors/font_pressed_color = Color(0.0051989057, 0.005198906, 0.0051989057, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u4trl")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("3_orblh")
theme_override_styles/pressed = ExtResource("4_u4trl")
theme_override_styles/hover = ExtResource("4_u4trl")
theme_override_styles/focus = ExtResource("4_u4trl")
text = "START"
alignment = 0

[node name="quitbutton" type="Button" parent="menu" unique_id=1078697102]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -53.0
offset_right = 36.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../settingsbutton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../startbutton")
theme_override_colors/font_pressed_color = Color(0.0051989057, 0.005198906, 0.0051989057, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u4trl")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("3_orblh")
theme_override_styles/pressed = ExtResource("4_u4trl")
theme_override_styles/hover = ExtResource("4_u4trl")
theme_override_styles/focus = ExtResource("4_u4trl")
text = "QUIT"
alignment = 0

[node name="settingsbutton" type="Button" parent="menu" unique_id=444169655]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -86.0
offset_right = 32.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../startbutton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../quitbutton")
theme_override_colors/font_pressed_color = Color(0.0051989057, 0.005198906, 0.0051989057, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u4trl")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("3_orblh")
theme_override_styles/pressed = ExtResource("4_u4trl")
theme_override_styles/hover = ExtResource("4_u4trl")
theme_override_styles/focus = ExtResource("4_u4trl")
text = "SETTINGS"
alignment = 0

[node name="Settings" type="Control" parent="." unique_id=1589153331]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = SubResource("Theme_81rgk")
script = ExtResource("6_7rblo")

[node name="quitbutton" type="Button" parent="Settings" unique_id=1658256264]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -44.0
offset_right = 107.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../resolution/CheckBox")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../volume/HSlider")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.0051989057, 0.005198906, 0.0051989057, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = ExtResource("3_agb1x")
theme_override_styles/pressed = ExtResource("3_agb1x")
theme_override_styles/hover = SubResource("StyleBoxFlat_alora")
theme_override_styles/focus = ExtResource("3_agb1x")
action_mode = 0
text = "BACK"

[node name="volume" type="BoxContainer" parent="Settings" unique_id=1076168030]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 199.99998
offset_top = 24.0
offset_right = -40.460022
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.595, 0.595)
vertical = true

[node name="Label" type="Label" parent="Settings/volume" unique_id=1547593861]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="Settings/volume" unique_id=582861036]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../quitbutton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../resolution/OptionButton")
value = 20.0

[node name="resolution" type="BoxContainer" parent="Settings" unique_id=1344724774]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 308.0
offset_bottom = 146.0
scale = Vector2(0.6, 0.6)
alignment = 1
vertical = true

[node name="resolution_label" type="Label" parent="Settings/resolution" unique_id=867502084]
layout_mode = 2
text = "resolution"

[node name="OptionButton" type="OptionButton" parent="Settings/resolution" unique_id=1452380222]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../volume/HSlider")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../CheckBox")

[node name="CheckBox" type="CheckBox" parent="Settings/resolution" unique_id=1489560551]
layout_mode = 2
focus_neighbor_left = NodePath("../OptionButton")
text = "Windowed"

[node name="titleUi" type="Control" parent="." unique_id=360951835]
anchors_preset = 0
offset_left = 228.0
offset_top = 16.0
offset_right = 268.0
offset_bottom = 56.0

[node name="TextureRect" type="TextureRect" parent="titleUi" unique_id=3396774]
layout_mode = 0
offset_left = -8.0
offset_right = 116.0
offset_bottom = 96.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_81rgk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="titleUi" unique_id=121649651]
position = Vector2(22, 16)
rotation = 3.1415927
scale = Vector2(2.1, -2.1)
sprite_frames = ExtResource("7_a6001")
animation = &"idle"
autoplay = "idle"

[node name="title" type="TextureRect" parent="titleUi" unique_id=1491564161]
layout_mode = 0
offset_left = -24.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_orblh")

[connection signal="pressed" from="menu/startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="menu/quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="pressed" from="menu/settingsbutton" to="." method="_on_settingsbutton_pressed"]
[connection signal="pressed" from="Settings/quitbutton" to="." method="_on_quit_settings_button_pressed"]
[connection signal="value_changed" from="Settings/volume/HSlider" to="Settings" method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="Settings/resolution/OptionButton" to="Settings" method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Settings/resolution/CheckBox" to="Settings" method="_on_check_box_toggled"]
